# stagehand

./: Cargo.toml  LICENSE  flake.nix  log  show.toml
src/: cli.rs  command.rs  controller.rs  dmx_output.rs  logging.rs  main.rs  messages.rs  tui.rs  tui_runner.rs  types.rs
src/data_structures/: address.rs  index.rs  level.rs  mod.rs  show.rs  universe.rs
src/tui/: command_buffer_widget.rs  logs_widget.rs  tombstones_widget.rs
