[package]
name = "stagehand"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossbeam = "0.8.4"
nom = "8.0.0"
ratatui = "0.30.0"
sacn = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.10"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
